<resources>
    <!--Templates    -->
    <string name="hungarian_date_format">%1$d.%2$d.%3$d</string>
    <string name="date_deadline">%1$s - %2$s</string>
    <string name="title_bet_with">Bet with: %1s</string>

    <string name="app_name">BetTracker</string>
    <string name="bet_over">Bet over</string>
    <string name="my_bets">My Bets</string>
    <string name="my_statistics">My Statistics</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name of the person you\'re betting with</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="new_bet">New bet</string>
    <string name="already_won">Already Won</string>
    <string name="pot">Pot</string>
    <string name="Deadline">Deadline</string>
    <string name="pick_date">Pick date</string>

    <string name="check_if_on">Check service</string>
    <string name="turn_on_notifications">Turn On Notifications</string>
    <string name="turn_off_notifications">Turn Off Notifications</string>
    <string name="status">Status</string>
    <string name="inprogress">In Progress</string>
    <string name="won">Won</string>
    <string name="lost">Lost</string>
    <string name="nodata">No Data</string>


    <string-array name="category_items">
        <item>Money</item>
        <item>Action</item>
        <item>Item</item>
    </string-array>

    <string-array name="status_items">
        <item>In Progress</item>
        <item>Won</item>
        <item>Lost</item>
    </string-array>

    <string name="description_autofill_hints">Bitcoin hits $100.000</string>
    <string name="view">View</string>
    <string name="qrcode">QRCODE</string>
    <string name="id">Id:</string>
    <string name="bet_with">Bet with:</string>
    <string name="description_label">Description:</string>
    <string name="category_label">Category:</string>
    <string name="pot_label">Pot:</string>
    <string name="bet_status_label">Bet status:</string>
    <string name="bet_start_label">Bet Start:</string>
    <string name="bet_end_label">Bet End:</string>
    <string name="new_name">New Name</string>
    <string name="change_name">Change Name</string>

</resources>