<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dialog_new_bet_item"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/dialog_new_bet_item_scroll"
        android:padding="12dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:text="@string/Deadline" />

            <DatePicker
                android:id="@+id/datePicker1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:text="@string/status" />

            <Spinner
                android:id="@+id/StatusSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/BetItemNameEditText"
                android:text="@string/name" />

            <EditText
                android:id="@+id/BetItemNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:labelFor="@+id/BetItemDescriptionEditText"
                android:text="@string/description" />

            <EditText
                android:id="@+id/BetItemDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/description_autofill_hints"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:text="@string/category" />

            <Spinner
                android:id="@+id/CategorySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:labelFor="@+id/BetItemPotEditText"
                android:text="@string/pot" />

            <EditText
                android:id="@+id/BetItemPotEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text" />


        </LinearLayout>


    </ScrollView>


</LinearLayout>