<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dip"
    android:background="@color/colorBackground">


    <Button
        android:id="@+id/btn_my_bets"
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:text="@string/my_bets"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_my_stats"
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:text="@string/my_statistics"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:text="@string/settings"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:text="TextView" />


</LinearLayout>